<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_set_year"
        android:title="@string/action_set_year_string"
        android:orderInCategory="1"/>

    <item android:id="@+id/action_set_song"
        android:title="@string/action_set_song_string"
        android:orderInCategory="2"/>

    <item android:id="@+id/action_add_year"
        android:title="@string/action_add_year_string"
        android:orderInCategory="3"/>

    <item android:id="@+id/action_add_song"
        android:title="@string/action_add_song_string"
        android:orderInCategory="4"/>


    <item android:id="@+id/action_set_next_song"
        android:title="@string/action_set_next_song"
        android:orderInCategory="5"/>

    <item android:id="@+id/action_view_setlist"
        android:title="@string/action_view_setlist"
        android:orderInCategory="6"/>

</menu>