<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/select_year_pref_string"/>

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/year_string" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/years_chosen_string"/>

        <TextView
            android:id="@+id/years_chosen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#0099CC"/>





        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/tour_pref_string"/>

        <Button
            android:id="@+id/btnTourQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/tour_string" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/tours_chosen_string"/>

        <TextView
            android:id="@+id/tours_chosen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#0099CC"/>






        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#CCFFFF"
            android:gravity="center_horizontal"
            android:text="@string/select_song_pref_string"/>

        <Button
            android:id="@+id/btnSongQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/song_string" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/songs_chosen_string"/>

        <TextView
            android:id="@+id/songs_chosen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#0099CC"/>




        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/select_duration_pref_string"/>

        <Button
            android:id="@+id/btnDurationQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/duration_string" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="#CCFFFF"
            android:text="@string/durations_chosen_string"/>

        <TextView
            android:id="@+id/durations_chosen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#0099CC"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>
</ScrollView>