<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/song_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:onClick="updateSongList"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/song_banner_main"
            android:textColor="#0099CC"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/now_playing_string"
            />

        <TextView
            android:id="@+id/song_banner_list_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#0099CC"
            android:textSize="18sp"
            android:text="@string/list_status_string"/>

        <TextView
            android:id="@+id/song_banner_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_banner_main"
            android:textColor="#0099CC"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Title"
            />

        <TextView
            android:id="@+id/song_banner_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_banner_title"
            android:textColor="#0099CC"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Venue"
            />

        <TextView
            android:id="@+id/song_banner_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_banner_title"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#0099CC"
            android:background="#000000"
            android:textSize="18sp"
            android:text="@string/duration_text_string"
            />
    </RelativeLayout>

    <ListView
        android:id="@+id/song_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/song_banner"
        android:clipToPadding="false"
        android:paddingBottom="150dp"
        />

</RelativeLayout>
